--- a/echoes.html
+++ b/echoes.html
@@ -15,7 +15,6 @@
       height: 100vh;
       overflow: hidden;
     }
-
     header {
       padding: 20px;
       text-align: center;
@@ -27,13 +26,11 @@
       justify-content: center;
       align-items: center;
     }
-
     #navToggle {
       cursor: pointer;
       font-size: 28px;
       margin-left: 12px;
     }
-
     #navMenu {
       display: none;
       margin-top: 10px;
@@ -41,101 +38,76 @@
       color: white;
       text-align: center;
     }
-
     #navMenu div {
       margin: 4px 0;
       cursor: pointer;
     }
-
     #navMenu div:hover {
       text-decoration: underline;
     }
-
     #subtitle {
       text-align: center;
       font-size: 20px;
       margin-top: 10px;
       color: #aaa;
     }
-
-    #newEcho {
+    #newThread {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
+      justify-content: center;
+      padding: 10px;
       background-color: #111;
       border-bottom: 1px solid #333;
     }
-
-    #echoTitle, #echoContent {
-      width: 80%;
+    #threadTitle, #threadContent {
+      width: 30%;
       padding: 10px;
-      margin: 5px 0;
+      margin: 0 5px;
       border: 1px solid #333;
       border-radius: 4px;
       background-color: #111;
       color: white;
     }
-
-    #postEcho {
+    #postThread {
       padding: 10px 20px;
-      margin-top: 10px;
       border: none;
       background-color: #333;
       color: white;
       cursor: pointer;
       border-radius: 4px;
     }
-
-    #postEcho:hover {
+    #postThread:hover {
       background-color: #555;
     }
-
     #threads {
       flex: 1;
       overflow-y: auto;
       padding: 20px;
     }
-
     .thread {
       background-color: #222;
-      padding: 12px;
-      margin-bottom: 14px;
+      padding: 10px;
+      margin-bottom: 12px;
       border-radius: 6px;
     }
-
-    .threadTitle {
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .threadContent {
-      margin-top: 6px;
-      font-size: 15px;
-    }
-
     .replyInput {
       width: 100%;
-      margin-top: 10px;
-      padding: 8px;
+      margin-top: 8px;
+      padding: 6px;
       background-color: #111;
       border: 1px solid #333;
       color: white;
     }
-
     .replyButton {
-      margin-top: 6px;
+      margin-top: 4px;
       padding: 6px 10px;
       background-color: #333;
       color: white;
       border: none;
       cursor: pointer;
     }
-
     .replyButton:hover {
       background-color: #555;
     }
-
     .reply {
       padding: 6px 10px;
       background-color: #333;
@@ -145,15 +117,14 @@
   </style>
 
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-database-compat.js"></script>
 </head>
 <body>
-
   <header>
     VOID — Echoes
     <span id="navToggle" onclick="toggleNav()">≡</span>
   </header>
-
   <div id="navMenu">
     <div onclick="location.href='index.html'">Enter the Abyss</div>
     <div onclick="location.href='echoes.html'">Echoes</div>
@@ -161,118 +132,10 @@
     <div onclick="alert('Coming soon')">Dark Messenger</div>
     <div onclick="alert('Coming soon')">System Core</div>
   </div>
-
-  <div id="subtitle">Start a new Echo discussion...</div>
-
-  <div id="newEcho">
-    <input id="echoTitle" placeholder="Echo title..." />
-    <textarea id="echoContent" placeholder="Write your topic..." rows="4"></textarea>
-    <button id="postEcho">Post Echo</button>
+  <div id="subtitle">Start a thread that echoes through the Void...</div>
+  <div id="newThread">
+    <input id="threadTitle" placeholder="Echo title..." />
+    <input id="threadContent" placeholder="Write your echo..." />
+    <button id="postThread">Echo</button>
   </div>
-
   <div id="threads"></div>
-
-  <script>
-  // Firebase config for your project
-  const firebaseConfig = {
-    apiKey: "AIzaSyDd7kvi8Weo5jRzeRciBKEuYPJsB34fYjA",
-    authDomain: "void-d9ec4.firebaseapp.com",
-    projectId: "void-d9ec4",
-    storageBucket: "void-d9ec4.appspot.com",
-    messagingSenderId: "267268035851",
-    appId: "1:267268035851:web:d535fe4175c06f170f3e0e",
-    databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com/"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.database();
-
-  const threadsDiv = document.getElementById("threads");
-  const postEchoBtn = document.getElementById("postEcho");
-
-  postEchoBtn.onclick = () => {
-    const title = document.getElementById("echoTitle").value.trim();
-    const content = document.getElementById("echoContent").value.trim();
-
-    if (!title || !content) return alert("Title and content required.");
-
-    const newEcho = {
-      title,
-      content,
-      timestamp: Date.now()
-    };
-
-    const threadRef = db.ref("echoes").push();
-    threadRef.set(newEcho);
-    document.getElementById("echoTitle").value = "";
-    document.getElementById("echoContent").value = "";
-  };
-
-  function renderThreads(snapshot) {
-    threadsDiv.innerHTML = "";
-    const echoes = snapshot.val();
-
-    if (!echoes) return;
-
-    Object.entries(echoes).reverse().forEach(([id, echo]) => {
-      const threadDiv = document.createElement("div");
-      threadDiv.className = "thread";
-
-      const title = document.createElement("div");
-      title.className = "threadTitle";
-      title.textContent = echo.title;
-
-      const content = document.createElement("div");
-      content.className = "threadContent";
-      content.textContent = echo.content;
-
-      const replyInput = document.createElement("input");
-      replyInput.className = "replyInput";
-      replyInput.placeholder = "Reply...";
-
-      const replyBtn = document.createElement("button");
-      replyBtn.className = "replyButton";
-      replyBtn.textContent = "Post Reply";
-
-      const repliesDiv = document.createElement("div");
-
-      replyBtn.onclick = () => {
-        const replyText = replyInput.value.trim();
-        if (!replyText) return;
-        db.ref(`echoes/${id}/replies`).push({
-          text: replyText,
-          time: Date.now()
-        });
-        replyInput.value = "";
-      };
-
-      // Load replies
-      if (echo.replies) {
-        Object.values(echo.replies).forEach(reply => {
-          const replyDiv = document.createElement("div");
-          replyDiv.className = "reply";
-          replyDiv.textContent = reply.text;
-          repliesDiv.appendChild(replyDiv);
-        });
-      }
-
-      threadDiv.appendChild(title);
-      threadDiv.appendChild(content);
-      threadDiv.appendChild(replyInput);
-      threadDiv.appendChild(replyBtn);
-      threadDiv.appendChild(repliesDiv);
-
-      threadsDiv.appendChild(threadDiv);
-    });
-  }
-
-  db.ref("echoes").on("value", renderThreads);
-
-  function toggleNav() {
-    const nav = document.getElementById("navMenu");
-    nav.style.display = nav.style.display === "block" ? "none" : "block";
-  }
-</script>
-</body>
-</html>
-
